# ddt-dataset-generator

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  SPEC.md
backend/: M1.3_COMPLETION_SUMMARY.md  README.md  SUPABASE_SETUP.md  check_storage_direct.py  cleanup_duplicates.py  cleanup_supabase_storage.py  cleanup_to_uploads.py  final_cleanup.py  final_storage_cleanup.py  fix_storage_paths.py  import_report_results.py  playground_schema.sql  process_samples.py  pyproject.toml  remove_storage_duplicates.py  requirements.txt  simple_cleanup.py  supabase_schema.sql  test_azure_ocr.py  test_datalab_extractor.py  test_datalab_simple.py  test_gemini_extractor.py  test_integration_db.py  upload_missing_files.py  upload_samples.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  routes.py  schemas.py
backend/src/database/: QUICK_REFERENCE.md  README.md  __init__.py  client.py  models.py  repository.py  storage.py
backend/src/extractors/: __init__.py  azure_ocr.py  datalab.py  gemini.py  schemas.py
backend/src/extractors/old/: azure_ocr_read_old.py
backend/src/processing/: __init__.py  alpaca_formatter.py  comparison.py  pipeline.py
backend/tests/: conftest.py  test_alpaca_formatter.py  test_comparison.py  test_database.py  test_extractors_integration.py  test_gemini_standalone.py
backend/tests/azure_analysis/: README.md  __init__.py  test_layout_vs_read.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: comparison-view.tsx  export-settings.tsx  (+7 more)
samples/: .gitkeep
(+3 files in other folders)
