[tool.poetry]
name = "ddt-dataset-generator-backend"
version = "1.0.0"
description = "Backend API for DDT Dataset Generator - FastAPI service for processing Italian DDT documents"
authors = ["DDT Dataset Generator Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-dotenv = "^1.0.0"
supabase = "^2.9.0"
httpx = "^0.27.0"
google-generativeai = "^0.8.0"
azure-ai-formrecognizer = "^3.3.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
ruff = "^0.8.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
